--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<div class="featured-content">
 			<div class="row">
-				<img src="img/fea1.jpg">
+				<img src="fea1.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="row">
-				<img src="img/fea2.jpg">
+				<img src="fea2.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -71,7 +71,7 @@
 			</div>
 
 			<div class="row">
-				<img src="img/fea3.jpg">
+				<img src="fea3.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -82,7 +82,7 @@
 			</div>
 
 			<div class="row">
-				<img src="img/fea4.jpg">
+				<img src="fea4.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -93,7 +93,7 @@
 			</div>
 
 			<div class="row">
-				<img src="img/fea5.jpg">
+				<img src="fea5.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="row">
-				<img src="img/fea6.jpg">
+				<img src="fea6.jpg">
 				<div class="fea-text">
 					<h5>Mens</h5>
 					<p>10 items</p>
@@ -134,7 +134,7 @@
 
 		<div class="new-content">
 			<div class="box">
-				<img src="img/tren1.jpg">
+				<img src="tren1.jpg">
 				<h5>Lorem Ipsum dizgi</h5>
 				<h6>$188</h6>
 				<div class="sale">
@@ -143,7 +143,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/tren2.jpg">
+				<img src="tren2.jpg">
 				<h5>Lorem Ipsum dizgi</h5>
 				<h6>$188</h6>
 				<div class="sale">
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/tren3.jpg">
+				<img src="tren3.jpg">
 				<h5>Lorem Ipsum dizgi</h5>
 				<h6>$188</h6>
 				<div class="sale">
@@ -161,7 +161,7 @@
 			</div>
 
 			<div class="box">
-				<img src="img/tren4.jpg">
+				<img src="tren4.jpg">
 				<h5>Lorem Ipsum dizgi</h5>
 				<h6>$188</h6>
 				<div class="sale">
@@ -177,27 +177,27 @@
 	<section class="brand">
 		<div class="brand-content">
 			<div class="main">
-				<img src="img/brand1.png">
+				<img src="brand1.png">
 			</div>
 
 			<div class="main">
-				<img src="img/brand2.png">
+				<img src="brand2.png">
 			</div>
 
 			<div class="main">
-				<img src="img/brand3.png">
+				<img src="brand3.png">
 			</div>
 
 			<div class="main">
-				<img src="img/brand4.png">
+				<img src="brand4.png">
 			</div>
 
 			<div class="main">
-				<img src="img/brand5.png">
+				<img src="brand5.png">
 			</div>
 
 			<div class="main">
-				<img src="img/brand6.png">
+				<img src="brand6.png">
 			</div>
 
 		</div>
